work on release workflow

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,7 @@ zig-cache/
 *.so
 *.dylib
 ui/
-lib/zul
-lib/log.zig
-lib/http.zig
-lib/typed.zig
-lib/zuckdb.zig
-lib/metrics.zig
-lib/websocket.zig
-lib/validate.zig
+lib/
+duckdb.h
 db.duckdb*
 
