--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,12 +82,12 @@ jobs:
           wget -q "https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-windows-amd64.zip"
           unzip -n *.zip && rm *.zip
 
-          mkdir -p release/logdk-x86_64-windows/
+          mkdir -p release/logdk-x86_64-windows-gnu/
           zig build -Dtarget=x86_64-windows -Doptimize=ReleaseFast
-          mv duckdb.dll zig-out/bin/logdk.exe release/logdk-x86_64-windows/
+          mv duckdb.dll zig-out/bin/logdk.exe release/logdk-x86_64-windows-gnu/
 
           cd release
-          tar -cJf logdk-x86_64-windows-gnu.tar.xz logdk-x86_64-windows
+          zip -r logdk-x86_64-windows-gnu.zip logdk-x86_64-windows-gnu
 
       - name: release
         uses: softprops/action-gh-release@v1
