zig fmt, start working on auto-purging old records

--- a/config.json
+++ b/config.json
@@ -13,8 +13,7 @@
 			"max_query_count": 32
 		},
 		"response": {
-			"max_header_count": 5,
-			"body_buffer_size": 524288
+			"max_header_count": 5
 		}
 	}
 }
